--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "mailtrap": "^3.3.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^1.6.1",
     "nodemailer": "^6.9.10",
+    "pdfkit": "^0.14.0",
     "pug": "^2.0.3",
-    "sequelize": "^5.0.0-beta.11"
+    "sequelize": "^5.0.0-beta.11",
+    "uuid": "^9.0.1"
   }
 }
